<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Event" Id="{424f55e5-b514-4649-8354-f5dfeb5cecd2}">
    <Declaration><![CDATA[{attribute 'analysis' := '-33'}
TYPE ST_Event :
	STRUCT
		iSource:		I_Component;
		eEventType:		E_Event;
		nTimestamp:   	ULINT;
		nID:			ULINT;
		sInstance:		STRING(255);
		sClass:			STRING(255);
		sMessage:		STRING(255);
		sDefault:		STRING(255);
		sArguments:		STRING(255);
		stFlags:		ST_EventFlags;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>